--- a/public/html/updateConfirmation.html
+++ b/public/html/updateConfirmation.html
@@ -19,7 +19,7 @@
                 <div class="question-text">Do you sure you want to upload your CV to blockchain?</div>
                 
                 <div class="buttons">
-                    <button class="button" onclick="window.location.href='updateSuccessful.html'">Yes</button>
+                    <button class="button" onclick="fetchAndPrepareData()">Yes</button>
                     <button class="button" onclick="window.location.href='viewCV.html'">No</button>
                 </div>
             </div>
@@ -43,5 +43,7 @@
             </a>
         </div>
     </div>
+
+    <script src="../js/bcFunction.js"></script>
 </body>
 </html>
