--- a/public/html/viewCV.html
+++ b/public/html/viewCV.html
@@ -7,6 +7,12 @@
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
     <link href="../css/wallet.css" rel="stylesheet" id="style-css">
+
+    <style>
+        #credentials{
+            text-align: left;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
