--- a/public/html/login.html
+++ b/public/html/login.html
@@ -1,66 +1,138 @@
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
-<link href="../css/loginCss.css" rel="stylesheet" id="style-css">
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<!------ Include the above in your HEAD tag ---------->
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+
+  <title>Wallet Holder Login</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet">
+  <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
+  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <!------ Include the above in your HEAD tag ---------->
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f9f9f9;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+      font-size: 15%;
+      
+    }
+
+    .login-card {
+
+      background-color: #ffffff;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      padding: 30px;
+      max-width: 500px;
+      max-height: 300px;
+      width: 100%;
+      height: 100%;
+      text-align: center;
+    }
+
+    .login-card h3 {
+      margin-bottom: 20px;
+      color: #007bff;
+    }
+
+    .login-card form input[type="text"],
+    .login-card form input[type="password"] {
+      width: 100%;
+      padding: 10px;
+      margin-bottom: 15px;
+      border: 1px solid #ddd;
+      border-radius: 5px;
+      font-size: 14px;
+    }
+
+    .login-card form input[type="text"]:focus,
+    .login-card form input[type="password"]:focus {
+      border-color: #007bff;
+      outline: none;
+    }
+
+    .login-card form .login-btn {
+      background-color: #007bff;
+      color: #ffffff;
+      border: none;
+      border-radius: 5px;
+      padding: 10px 20px;
+      font-size: 16px;
+      cursor: pointer;
+      width: 100%;
+    }
+
+    .login-card form .login-btn:hover {
+      background-color: #0056b3;
+    }
+
+    .login-card .forgot-password {
+      margin-top: 10px;
+      font-size: 14px;
+    }
+
+    .login-card .forgot-password a {
+      color: #007bff;
+      text-decoration: none;
+    }
+
+    .login-card .forgot-password a:hover {
+      text-decoration: underline;
+    }
+  </style>
+</head>
 
 <body>
-  <div class="wrapper fadeInDown">
-    <div id="formContent">
-      <!-- Tabs Titles -->
-  
-      <!-- Icon -->
-      <div class="fadeIn first">
-        <h1>Wallet Login</h1>
-      </div>
-  
-      <!-- Login Form -->
-      <form id="loginForm">
-        <input type="text" class="fadeIn second" id="email" name="email" placeholder="Email">
-        <input type="password" class="fadeIn third" id="password" name="password" placeholder="Password"> </br>
-        <button type="submit" class="fadeIn fourth">Log In</button>
-      </form>
-  
-      <!-- Remind Passowrd -->
-      <div id="formFooter">
-        <a class="underlineHover" href="#">Forgot Password?</a>
-      </div>
-  
-    </div>
-  </div>
+
+
+  <div class="login-card">
+    <h3>Wallet Login</h3>
+    <form id="loginForm">
+      <input type="text"  id="email" name="email" placeholder="Email">
+      <input type="password" id="password" name="password" placeholder="Password"> </br>
+      <button type="submit" class="login-btn">Log In</button>
+    </form>
+
+
+
+
+
 </body>
 
 <script>
 
   // Function to clear the session every time the page loads
   async function clearSession() {
-      await fetch('/clear-session', { method: 'GET' });
-      console.log('Session cleared');
+    await fetch('/clear-session', { method: 'GET' });
+    console.log('Session cleared');
   }
 
   // Call clearSession when the page loads
-   window.onload = clearSession;
+  window.onload = clearSession;
 
-  document.getElementById('loginForm').addEventListener('submit', async function(e) {
-      e.preventDefault();
-  
-      const email = document.getElementById('email').value;
-      const password = document.getElementById('password').value;
-  
-      const response = await fetch('/js/function', {
-          method: 'POST',
-          headers: {
-              'Content-Type': 'application/json'
-          },
-          body: JSON.stringify({ email, password })
-      });
-  
-      const data = await response.json();
-      if (response.ok) {
-        window.location.href = '/html/linkWallet.html'; // Redirect to linkWallet.html
-      } else {
-          alert(data.message);  // Show error message if login fails
-      }
+  document.getElementById('loginForm').addEventListener('submit', async function (e) {
+    e.preventDefault();
+
+    const email = document.getElementById('email').value;
+    const password = document.getElementById('password').value;
+
+    const response = await fetch('/js/function', {
+      method: 'POST',
+      headers: {
+        'Content-Type': 'application/json'
+      },
+      body: JSON.stringify({ email, password })
+    });
+
+    const data = await response.json();
+    if (response.ok) {
+      window.location.href = '/html/linkWallet.html'; // Redirect to linkWallet.html
+    } else {
+      alert(data.message);  // Show error message if login fails
+    }
   });
-  </script>
+</script>
