--- a/public/html/login.html
+++ b/public/html/login.html
@@ -2,106 +2,95 @@
 <html lang="en">
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Recruiter Login</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet">
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f9f9f9;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
 
-  <title>Wallet Holder Login</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet">
-  <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
-  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <!------ Include the above in your HEAD tag ---------->
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f9f9f9;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
-      font-size: 15%;
-      
-    }
+        .login-card {
+            background-color: #ffffff;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            padding: 30px;
+            max-width: 400px;
+            width: 100%;
+            text-align: center;
+        }
 
-    .login-card {
+        .login-card h3 {
+            margin-bottom: 20px;
+            color: #007bff;
+        }
 
-      background-color: #ffffff;
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      padding: 30px;
-      max-width: 500px;
-      max-height: 300px;
-      width: 100%;
-      height: 100%;
-      text-align: center;
-    }
+        .login-card form input[type="text"],
+        .login-card form input[type="password"] {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 15px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            font-size: 14px;
+        }
 
-    .login-card h3 {
-      margin-bottom: 20px;
-      color: #007bff;
-    }
+        .login-card form input[type="text"]:focus,
+        .login-card form input[type="password"]:focus {
+            border-color: #007bff;
+            outline: none;
+        }
 
-    .login-card form input[type="text"],
-    .login-card form input[type="password"] {
-      width: 100%;
-      padding: 10px;
-      margin-bottom: 15px;
-      border: 1px solid #ddd;
-      border-radius: 5px;
-      font-size: 14px;
-    }
+        .login-card form .login-btn {
+            background-color: #007bff;
+            color: #ffffff;
+            border: none;
+            border-radius: 5px;
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
+            width: 100%;
+        }
 
-    .login-card form input[type="text"]:focus,
-    .login-card form input[type="password"]:focus {
-      border-color: #007bff;
-      outline: none;
-    }
+        .login-card form .login-btn:hover {
+            background-color: #0056b3;
+        }
 
-    .login-card form .login-btn {
-      background-color: #007bff;
-      color: #ffffff;
-      border: none;
-      border-radius: 5px;
-      padding: 10px 20px;
-      font-size: 16px;
-      cursor: pointer;
-      width: 100%;
-    }
+        .login-card .forgot-password {
+            margin-top: 10px;
+            font-size: 14px;
+        }
 
-    .login-card form .login-btn:hover {
-      background-color: #0056b3;
-    }
+        .login-card .forgot-password a {
+            color: #007bff;
+            text-decoration: none;
+        }
 
-    .login-card .forgot-password {
-      margin-top: 10px;
-      font-size: 14px;
-    }
-
-    .login-card .forgot-password a {
-      color: #007bff;
-      text-decoration: none;
-    }
-
-    .login-card .forgot-password a:hover {
-      text-decoration: underline;
-    }
-  </style>
+        .login-card .forgot-password a:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 
 <body>
-
-
-  <div class="login-card">
-    <h3>Wallet Login</h3>
-    <form id="loginForm">
-      <input type="text"  id="email" name="email" placeholder="Email">
-      <input type="password" id="password" name="password" placeholder="Password"> </br>
-      <button type="submit" class="login-btn">Log In</button>
-    </form>
-
-
-
-
-
+    <div class="login-card">
+        <h3>Wallet Login</h3>
+        <form id="loginForm">
+            <input type="text" id="email" name="email" placeholder="Email" required>
+            <input type="password" id="password" name="password" placeholder="Password" required>
+            <input type="submit" class="login-btn" value="Log In">
+        </form>
+    </div>
 </body>
+
 
 <script>
 
