--- a/public/html/logout.html
+++ b/public/html/logout.html
@@ -25,7 +25,7 @@
 
     <nav class="top-nav">
         <div class="logo">
-            <h4>Saino Recruiter</h4>
+            <h4>Wallet Holder</h4>
         </div>
 
         <div>
