--- a/public/html/updateCV.html
+++ b/public/html/updateCV.html
@@ -14,7 +14,7 @@
 <body>
     <nav class="top-nav">
         <div class="logo">
-            <h4>Saino Recruiter</h4>
+            <h4>Wallet Holder</h4>
         </div>
 
         <div>
