--- a/public/html/viewRquest.html
+++ b/public/html/viewRquest.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="top-nav">
         <div class="logo">
-            <h4>Saino Recruiter</h4>
+            <h4>Wallet Holder</h4>
         </div>
 
         <div>
