--- a/public/html/viewConfirmation.html
+++ b/public/html/viewConfirmation.html
@@ -10,7 +10,7 @@
 <body>
     <nav class="top-nav">
         <div class="logo">
-            <h4>Saino Recruiter</h4>
+            <h4>Wallet Holder</h4>
         </div>
 
         <div>
@@ -32,7 +32,7 @@
 
     <main class="main-content">
     
-        <div class="info-list" id="infoList">
+        <div class="info-list" id="infoList" >
             <div class="confirm-card">
                 <div class="confirm-info">
                     <h3 id="confirmationMessage"></h3>
