--- a/public/html/viewConfirmation.html
+++ b/public/html/viewConfirmation.html
@@ -67,12 +67,12 @@
             const confirmationMessage = document.getElementById('confirmationMessage');
             confirmationMessage.innerHTML = `
             Do you want to response the request from: <br> <br>
-            <h3>Request Details:</h3>
-            <p><strong>Requested by Recruiter:</strong> ${recruiter}</p>
-            <p><strong>Recruiter Name:</strong> ${userName}</p>
-            <p><strong>Company Name:</strong> ${companyName}</p>
-            <p><strong>Email:</strong> ${email}</p>
-            <p><strong>Segment:</strong> ${segmentType}</p>
+            <u><h3>Requester Details:</h3></u> <br>
+            
+            <p>Recruiter Name: ${userName}</p>
+            <p>Company Name: ${companyName}</p>
+            <p>Email: ${email}</p>
+            Segment Type: ${segmentType}
             
             `;
 
